color row based of result of rule, fix shifting of column from checkmark/x

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -47,5 +47,8 @@ select {
   background: #fff;
   box-shadow: 0 1px 0 rgba(0,0,0,0.2);
   outline: none;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -o-border-radius: 2px;
   border-radius: 2px;
 }
