--- a/app/assets/stylesheets/sass/header.css.scss
+++ b/app/assets/stylesheets/sass/header.css.scss
@@ -13,6 +13,9 @@ $menu-unit-width: (100% / $units);
     margin: 0;
     border: 0;
     border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -o-border-radius: 0;
 }
 
 .navbar {
